logs/catkin-tools-python.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './etc'...
Listing './etc/bash_completion.d'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/catkin_pkg'...
Listing './lib/python3.5/site-packages/catkin_pkg/cli'...
Listing './lib/python3.5/site-packages/catkin_pkg/templates'...
Listing './lib/python3.5/site-packages/catkin_pkg-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/catkin_tools'...
Listing './lib/python3.5/site-packages/catkin_tools/commands'...
Listing './lib/python3.5/site-packages/catkin_tools/execution'...
Listing './lib/python3.5/site-packages/catkin_tools/jobs'...
Listing './lib/python3.5/site-packages/catkin_tools/jobs/commands'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/linux'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/osx'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/osx/catkin build.app'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/osx/catkin build.app/Contents'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/osx/catkin build.app/Contents/MacOS'...
Listing './lib/python3.5/site-packages/catkin_tools/notifications/resources/osx/catkin build.app/Contents/Resources'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_build'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_clean'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_config'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_create'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_env'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_init'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_list'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_locate'...
Listing './lib/python3.5/site-packages/catkin_tools/verbs/catkin_profile'...
Listing './lib/python3.5/site-packages/catkin_tools-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/catkin_tools_python'...
Compiling './lib/python3.5/site-packages/catkin_tools_python/create_pypi_gbp.py'...
***   File "./lib/python3.5/site-packages/catkin_tools_python/create_pypi_gbp.py", line 81
    print "No change to tracks.yaml."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/catkin_tools_python/create_python_package_xmls.py'...
***   File "./lib/python3.5/site-packages/catkin_tools_python/create_python_package_xmls.py", line 172
    print "Can't use --version or --deps when processing multiple packages."
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/catkin_tools_python/fix_python_script_shebangs.py'...
***   File "./lib/python3.5/site-packages/catkin_tools_python/fix_python_script_shebangs.py", line 58
    print "Modified %s script(s) found in [%s]" % (ret, args.bindir)
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/catkin_tools_python-0.1.1.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/empy-3.3.2.egg-info'...
Listing './lib/python3.5/site-packages/osrf_pycommon'...
Listing './lib/python3.5/site-packages/osrf_pycommon/cli_utils'...
Listing './lib/python3.5/site-packages/osrf_pycommon/process_utils'...
Listing './lib/python3.5/site-packages/osrf_pycommon/process_utils/async_execute_process_asyncio'...
Listing './lib/python3.5/site-packages/osrf_pycommon/terminal_color'...
Listing './lib/python3.5/site-packages/osrf_pycommon-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pkginfo'...
Listing './lib/python3.5/site-packages/pkginfo/tests'...
Listing './lib/python3.5/site-packages/pkginfo-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
Listing './share/zsh'...
Listing './share/zsh/site-functions'...
